examples/__tests__/__snapshots__/60_extension/extension_gql-tada__gql-tada.snap
/some/path/to/extension_gql-tada__gql-tada.ts:XX
import { Graffle } from '../$/graffle/$$.js'
         ^

SyntaxError: The requested module '../$/graffle/$$.js' does not provide an export named 'Graffle'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:XX:XX)
    at async ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX
